[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "todo"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.7"
django-crispy-forms = "^1.9"
django-crispy-bootstrap = "^0.1.1"
django-bootstrap = "^0.2.4"
[tool.poetry.dev-dependencies]
